[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spox"
version = "0.1.0"
description = "Spox: Python project scaffold depending on ib_async and ta-lib."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ib_async",
    "ta-lib",
    "apscheduler",
    "pytest",
    "numpy",
]
authors = [{ name = "Spox contributors" }]
license = { text = "MIT" }
keywords = ["ib_async", "ta-lib", "trading", "scaffold"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/your-org/spox"
Repository = "https://github.com/your-org/spox.git"
Issues = "https://github.com/your-org/spox/issues"

[tool.setuptools.packages.find]
where = ["src"]
